# scoremap

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml
examples/: advanced.py  basic.py  run_practice.py
src/: __main__.py  core.py  health.py  utils.py
src/scoremap/: __init__.py  analyzer.py  cli.py  models.py  planner.py  report.py
src/scoremap/exams/: __init__.py  gmat.py  gre.py  sat.py
src/scoremap/practice/: __init__.py  adaptive.py  question_bank.py  session.py
tests/: test_adaptive.py  test_analyzer.py  test_benchmark.py  test_core.py  test_integration.py
